# Numedy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  exec.sh  main.py  pyproject.toml  req.txt
core/: config.py
docker/: docker-compose.yml
helpers/: base_service.py  broker_client.py  broker_sender.py  database_helper.py  file_helper.py  string_prepare.py
interfaces/: base_interface.py
interfaces/warehouse/: interfaces.py  message_builder.py
migrations/versions/: 131934977d7d_adding_data.py  72bacd508cc1_.py
src/calculation_mass_src/: main.py  prepare.py  service.py
src/models/: __init__.py  base.py  product.py  storage.py  users.py
src/server_src/: base_broker_connector.py  main.py
src/server_src/models/: __init__.py  base.py  db_helper.py  product.py
src/server_src/server/: prepare.py  routes.py
src/server_src/server/users/: actions.py  routes.py  schemas.py
src/server_src/server/warehouse/: actions.py  broker_connector.py  dependencies.py  prepare.py  routes.py  schemas.py
static/css/: main.css
static/js/: client.js  index.js  storage_page.js  websocket_client.js
static/pages/: index.html  login_page.html  storage_page.html
