[tool.poetry]
name = "numedy"
version = "0.1.0"
description = "This project was created for Numedy"
authors = ["TrishinA <trishin.aoff@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.110.1"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
